--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@import 'reset.css';
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
